source/fitsio.d

/*  The FITSIO software was written by William Pence at the High Energy    */
/*  Astrophysic Science Archive Research Center (HEASARC) at the NASA      */
/*  Goddard Space Flight Center.                                           */
/*

Copyright (Unpublished--all rights reserved under the copyright laws of
the United States), U.S. Government as represented by the Administrator
of the National Aeronautics and Space Administration.  No copyright is
claimed in the United States under Title 17, U.S. Code.

Permission to freely use, copy, modify, and distribute this software
and its documentation without fee is hereby granted, provided that this
copyright notice and disclaimer of warranty appears in all copies.

DISCLAIMER:

THE SOFTWARE IS PROVIDED 'AS IS' WITHOUT ANY WARRANTY OF ANY KIND,
EITHER EXPRESSED, IMPLIED, OR STATUTORY, INCLUDING, BUT NOT LIMITED TO,
ANY WARRANTY THAT THE SOFTWARE WILL CONFORM TO SPECIFICATIONS, ANY
IMPLIED WARRANTIES OF MERCHANTABILITY, FITNESS FOR A PARTICULAR
PURPOSE, AND FREEDOM FROM INFRINGEMENT, AND ANY WARRANTY THAT THE
DOCUMENTATION WILL CONFORM TO THE SOFTWARE, OR ANY WARRANTY THAT THE
SOFTWARE WILL BE ERROR FREE.  IN NO EVENT SHALL NASA BE LIABLE FOR ANY
DAMAGES, INCLUDING, BUT NOT LIMITED TO, DIRECT, INDIRECT, SPECIAL OR
CONSEQUENTIAL DAMAGES, ARISING OUT OF, RESULTING FROM, OR IN ANY WAY
CONNECTED WITH THIS SOFTWARE, WHETHER OR NOT BASED UPON WARRANTY,
CONTRACT, TORT , OR OTHERWISE, WHETHER OR NOT INJURY WAS SUSTAINED BY
PERSONS OR PROPERTY OR OTHERWISE, AND WHETHER OR NOT LOSS WAS SUSTAINED
FROM, OR AROSE OUT OF THE RESULTS OF, OR USE OF, THE SOFTWARE OR
SERVICES PROVIDED HEREUNDER."

*/

extern (C):


import core.stdc.config;
import core.stdc.stdio;
import core.stdc.stdlib;
import core.stdc.stdint; // At the top of your file

/* Minor and micro numbers must not exceed 99 under current method
   of version representataion in ffvers(). */
enum CFITSIO_MICRO = 2;
enum CFITSIO_MINOR = 6;
enum CFITSIO_MAJOR = 4;
enum CFITSIO_SONAME = 10;

/* the SONAME is incremented in a new release if the binary shared */
/* library (on linux and Mac systems) is not backward compatible */
/* with the previous release of CFITSIO */

/* CFITS_API is defined below for use on Windows systems.  */
/* It is used to identify the public functions which should be exported. */
/* This has no effect on non-windows platforms where "WIN32" is not defined */

/* __declspec(dllimport) */
/* CFITS_API */
/* defined (WIN32) */

/* the following was provided by Michael Greason (GSFC) to fix a */
/*  C/Fortran compatibility problem on an SGI Altix system running */
/*  SGI ProPack 4 [this is a Novell SuSE Enterprise 9 derivative]  */
/*  and using the Intel C++ and Fortran compilers (version 9.1)  */

/* apparently needed on debian linux systems */
/* to define off_t                           */

/* apparently needed to define size_t with gcc 2.8.1 */
/* needed for LLONG_MAX and INT64_MAX definitions */

/* Define the datatype for variables which store file offset values. */
/* The newer 'off_t' datatype should be used for this purpose, but some */
/* older compilers do not recognize this type, in which case we use 'long' */
/* instead.  Note that _OFF_T is defined (or not) in stdio.h depending */
/* on whether _LARGEFILE_SOURCE is defined in sys/feature_tests.h  */
/* (at least on Solaris platforms using cc)  */

/*  Debian systems require: "(defined(__GLIBC__) && defined(__off_t_defined))" */
/*  the mingw-w64 compiler requires: "(defined(__MINGW32__) && defined(_OFF_T_DEFINED))" */

alias OFF_T = long;

/* this block determines if the the string function name is
    strtol or strtoll, and whether to use %ld or %lld in printf statements */

/*
   The following 2 cases for that Athon64 were removed on 4 Jan 2006;
   they appear to be incorrect now that LONGLONG is always typedef'ed
   to 'long long'
    ||  defined(__ia64__)   \
    ||  defined(__x86_64__) \
*/

enum USE_LL_SUFFIX = 0;

/*
   Determine what 8-byte integer data type is available.
  'long long' is now supported by most compilers, but
  older MS Visual C++ compilers before V7.0 use '__int64' instead.
*/

/* this may have been previously defined */ /* Microsoft Visual C++ */ /* versions earlier than V7.0 do not have 'long long' */

/* newer versions do support 'long long' */
alias LONGLONG = long;
alias ULONGLONG = ulong;

/* for the Borland 5.5 compiler, in particular */

/* Linux and Solaris definition */
enum LONGLONG_MAX = long.max;
enum LONGLONG_MIN = long.min;

/* Mac OS X & CYGWIN defintion */

/* windows definition */

/* windows definition */

/* sizeof(long) = 64 */
/* max 64-bit integer */
/* min 64-bit integer */

/*  define a default value, even if it is never used */
/* max 64-bit integer */
/* min 64-bit integer */

/* end of ndef LONGLONG_MAX section */

/* ================================================================= */

/*  The following exclusion if __CINT__ is defined is needed for ROOT */

enum NIOBUF = 40; /* number of IO buffers to create (default = 40) */
/* !! Significantly increasing NIOBUF may degrade performance !! */

enum IOBUFLEN = 2880; /* size in bytes of each IO buffer (DONT CHANGE!) */

/* global variables */

enum FLEN_FILENAME = 1025; /* max length of a filename  */
enum FLEN_KEYWORD = 75; /* max length of a keyword (HIERARCH convention) */
enum FLEN_CARD = 81; /* length of a FITS header card */
enum FLEN_VALUE = 71; /* max length of a keyword value string */
enum FLEN_COMMENT = 73; /* max length of a keyword comment string */
enum FLEN_ERRMSG = 81; /* max length of a FITSIO error message */
enum FLEN_STATUS = 31; /* max length of a FITSIO status text string */

enum TBIT = 1; /* codes for FITS table data types */
enum TBYTE = 11;
enum TSBYTE = 12;
enum TLOGICAL = 14;
enum TSTRING = 16;
enum TUSHORT = 20;
enum TSHORT = 21;
enum TUINT = 30;
enum TINT = 31;
enum TULONG = 40;
enum TLONG = 41;
enum TINT32BIT = 41; /* used when returning datatype of a column */
enum TFLOAT = 42;
enum TULONGLONG = 80;
enum TLONGLONG = 81;
enum TDOUBLE = 82;
enum TCOMPLEX = 83;
enum TDBLCOMPLEX = 163;

enum TYP_STRUC_KEY = 10;
enum TYP_CMPRS_KEY = 20;
enum TYP_SCAL_KEY = 30;
enum TYP_NULL_KEY = 40;
enum TYP_DIM_KEY = 50;
enum TYP_RANG_KEY = 60;
enum TYP_UNIT_KEY = 70;
enum TYP_DISP_KEY = 80;
enum TYP_HDUID_KEY = 90;
enum TYP_CKSUM_KEY = 100;
enum TYP_WCS_KEY = 110;
enum TYP_REFSYS_KEY = 120;
enum TYP_COMM_KEY = 130;
enum TYP_CONT_KEY = 140;
enum TYP_USER_KEY = 150;

alias INT32BIT = int; /* 32-bit integer datatype.  Currently this       */
/* datatype is an 'int' on all useful platforms   */
/* however, it is possible that that are cases    */
/* where 'int' is a 2-byte integer, in which case */
/* INT32BIT would need to be defined as 'long'.   */

enum BYTE_IMG = 8; /* BITPIX code values for FITS image types */
enum SHORT_IMG = 16;
enum LONG_IMG = 32;
enum LONGLONG_IMG = 64;
enum FLOAT_IMG = -32;
enum DOUBLE_IMG = -64;
/* The following 2 codes are not true FITS         */
/* datatypes; these codes are only used internally */
/* within cfitsio to make it easier for users      */
/* to deal with unsigned integers.                 */
enum SBYTE_IMG = 10;
enum USHORT_IMG = 20;
enum ULONG_IMG = 40;
enum ULONGLONG_IMG = 80;

enum IMAGE_HDU = 0; /* Primary Array or IMAGE HDU */
enum ASCII_TBL = 1; /* ASCII table HDU  */
enum BINARY_TBL = 2; /* Binary table HDU */
enum ANY_HDU = -1; /* matches any HDU type */

enum READONLY = 0; /* options when opening a file */
enum READWRITE = 1;

/* adopt a hopefully obscure number to use as a null value flag */
enum FLOATNULLVALUE = -9.11912E-36F;
enum DOUBLENULLVALUE = -9.1191291391491E-36;

/* compression algorithm codes */
enum NO_DITHER = -1;
enum SUBTRACTIVE_DITHER_1 = 1;
enum SUBTRACTIVE_DITHER_2 = 2;
enum MAX_COMPRESS_DIM = 6;
enum RICE_1 = 11;
enum GZIP_1 = 21;
enum GZIP_2 = 22;
enum PLIO_1 = 31;
enum HCOMPRESS_1 = 41;
enum BZIP2_1 = 51; /* not publicly supported; only for test purposes */
enum NOCOMPRESS = -1;

enum TRUE = 1;

enum FALSE = 0;

enum CASESEN = 1; /* do case-sensitive string match */
enum CASEINSEN = 0; /* do case-insensitive string match */

enum GT_ID_ALL_URI = 0; /* hierarchical grouping parameters */
enum GT_ID_REF = 1;
enum GT_ID_POS = 2;
enum GT_ID_ALL = 3;
enum GT_ID_REF_URI = 11;
enum GT_ID_POS_URI = 12;

enum OPT_RM_GPT = 0;
enum OPT_RM_ENTRY = 1;
enum OPT_RM_MBR = 2;
enum OPT_RM_ALL = 3;

enum OPT_GCP_GPT = 0;
enum OPT_GCP_MBR = 1;
enum OPT_GCP_ALL = 2;

enum OPT_MCP_ADD = 0;
enum OPT_MCP_NADD = 1;
enum OPT_MCP_REPL = 2;
enum OPT_MCP_MOV = 3;

enum OPT_MRG_COPY = 0;
enum OPT_MRG_MOV = 1;

enum OPT_CMT_MBR = 1;
enum OPT_CMT_MBR_DEL = 11;

struct tcolumn
{
    /* structure used to store table column information */

    char[70] ttype; /* column name = FITS TTYPEn keyword; */
    LONGLONG tbcol; /* offset in row to first byte of each column */
    int tdatatype; /* datatype code of each column */
    LONGLONG trepeat; /* repeat count of column; number of elements */
    double tscale; /* FITS TSCALn linear scaling factor */
    double tzero; /* FITS TZEROn linear scaling zero point */
    LONGLONG tnull; /* FITS null value for int image or binary table cols */
    char[20] strnull; /* FITS null value string for ASCII table columns */
    char[10] tform; /* FITS tform keyword value  */
    c_long twidth; /* width of each ASCII table column */
}

enum VALIDSTRUC = 555; /* magic value used to identify if structure is valid */

struct FITSfile
{
    /* structure used to store basic FITS file information */

    int filehandle; /* handle returned by the file open function */
    int driver; /* defines which set of I/O drivers should be used */
    int open_count; /* number of opened 'fitsfiles' using this structure */
    char* filename; /* file name */
    int validcode; /* magic value used to verify that structure is valid */
    int only_one; /* flag meaning only copy the specified extension */
    int noextsyntax; /* flag for file opened with request to ignore extended syntax*/
    LONGLONG filesize; /* current size of the physical disk file in bytes */
    LONGLONG logfilesize; /* logical size of file, including unflushed buffers */
    int lasthdu; /* is this the last HDU in the file? 0 = no, else yes */
    LONGLONG bytepos; /* current logical I/O pointer position in file */
    LONGLONG io_pos; /* current I/O pointer position in the physical file */
    int curbuf; /* number of I/O buffer currently in use */
    int curhdu; /* current HDU number; 0 = primary array */
    int hdutype; /* 0 = primary array, 1 = ASCII table, 2 = binary table */
    int writemode; /* 0 = readonly, 1 = readwrite */
    int maxhdu; /* highest numbered HDU known to exist in the file */
    int MAXHDU; /* dynamically allocated dimension of headstart array */
    LONGLONG* headstart; /* byte offset in file to start of each HDU */
    LONGLONG headend; /* byte offest in file to end of the current HDU header */
    LONGLONG ENDpos; /* byte offest to where the END keyword was last written */
    LONGLONG nextkey; /* byte offset in file to beginning of next keyword */
    LONGLONG datastart; /* byte offset in file to start of the current data unit */
    int imgdim; /* dimension of image; cached for fast access */
    LONGLONG[99] imgnaxis; /* length of each axis; cached for fast access */
    int tfield; /* number of fields in the table (primary array has 2 */
    int startcol; /* used by ffgcnn to record starting column number */
    LONGLONG origrows; /* original number of rows (value of NAXIS2 keyword)  */
    LONGLONG numrows; /* number of rows in the table (dynamically updated) */
    LONGLONG rowlength; /* length of a table row or image size (bytes) */
    tcolumn* tableptr; /* pointer to the table structure */
    LONGLONG heapstart; /* heap start byte relative to start of data unit */
    LONGLONG heapsize; /* size of the heap, in bytes */

    /* the following elements are related to compressed images */
